--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
-  "name": "IVAN STRING GEN",
+  "name": "Iᴠᴀɴ Sᴛʀɪɴɢ Gᴇɴᴇʀᴀᴛᴏʀ Bᴏᴛ",
   "description": "Telegram bot deployed on Heroku",
   "https://github.com/Ahad611/Ivan-String-Session-Generator-Bot",
   "keywords": ["telegram", "bot", "python", "heroku"],
